[package]
name = "LanBeam"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
md5 = "0.7"
open = "4.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
serde_json = "1.0.145"
rfd = "0.15.4"
dirs = "5.0"

[build-dependencies]
winres = "0.1"
